// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When flattenListItems is false, the list has paragraph elements 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "text": "Bullet 1",
              },
            ],
            "type": "paragraph",
          },
        ],
        "type": "list-item",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "text": "Bullet 2",
              },
            ],
            "type": "paragraph",
          },
          Object {
            "children": Array [
              Object {
                "children": Array [
                  Object {
                    "children": Array [
                      Object {
                        "text": "Nested 1 Bullet 1",
                      },
                    ],
                    "type": "paragraph",
                  },
                ],
                "type": "list-item",
              },
              Object {
                "children": Array [
                  Object {
                    "children": Array [
                      Object {
                        "text": "Nested 1 Bullet 2",
                      },
                    ],
                    "type": "paragraph",
                  },
                  Object {
                    "children": Array [
                      Object {
                        "children": Array [
                          Object {
                            "children": Array [
                              Object {
                                "text": "Nested 2 Bullet 1",
                              },
                            ],
                            "type": "paragraph",
                          },
                        ],
                        "type": "list-item",
                      },
                      Object {
                        "children": Array [
                          Object {
                            "children": Array [
                              Object {
                                "text": "Nested 2 Bullet 2",
                              },
                            ],
                            "type": "paragraph",
                          },
                        ],
                        "type": "list-item",
                      },
                    ],
                    "type": "bulleted-list",
                  },
                ],
                "type": "list-item",
              },
            ],
            "type": "bulleted-list",
          },
        ],
        "type": "list-item",
      },
    ],
    "type": "bulleted-list",
  },
]
`;

exports[`When flattenListItems is true, the list-items have leaf nodes 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "text": "Bullet 1",
          },
        ],
        "type": "list-item",
      },
      Object {
        "children": Array [
          Object {
            "text": "Bullet 2",
          },
          Object {
            "children": Array [
              Object {
                "children": Array [
                  Object {
                    "text": "Nested 1 Bullet 1",
                  },
                ],
                "type": "list-item",
              },
              Object {
                "children": Array [
                  Object {
                    "text": "Nested 1 Bullet 2",
                  },
                  Object {
                    "children": Array [
                      Object {
                        "children": Array [
                          Object {
                            "text": "Nested 2 Bullet 1",
                          },
                        ],
                        "type": "list-item",
                      },
                      Object {
                        "children": Array [
                          Object {
                            "text": "Nested 2 Bullet 2",
                          },
                        ],
                        "type": "list-item",
                      },
                    ],
                    "type": "bulleted-list",
                  },
                ],
                "type": "list-item",
              },
            ],
            "type": "bulleted-list",
          },
        ],
        "type": "list-item",
      },
    ],
    "type": "bulleted-list",
  },
]
`;
